Bug 56680 - [Bisected] xf86-video-ati git breaks X with no screens found
Summary: [Bisected] xf86-video-ati git breaks X with no screens found
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
: 56663 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-11-02 14:00 UTC by Serkan Hosca
Modified: 2012-11-03 23:03 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Working X log (57.13 KB, text/plain)
2012-11-02 14:02 UTC, Serkan Hosca
no flags Details
Failing X log (22.02 KB, text/plain)
2012-11-02 14:03 UTC, Serkan Hosca
no flags Details
version 2 of 39eac3104c2f08b4d78aab3f88fd104301eb4711 (1.55 KB, text/plain)
2012-11-02 19:11 UTC, Ilija Hadzic
no flags Details

Description Serkan Hosca 2012-11-02 14:00:40 UTC
Latest -ati git breaks X. Bisected:

39eac3104c2f08b4d78aab3f88fd104301eb4711 is the first bad commit
commit 39eac3104c2f08b4d78aab3f88fd104301eb4711
Author: Ilija Hadzic <ihadzic@research.bell-labs.com>
Date:   Mon Sep 24 17:41:32 2012 -0400

    radeon/radeon_platform_probe: fix Zaphod mode breakage
    
    Using radeon_platform_probe function breaks the Zaphod mode because
    it attempts to call xf86AddEntityToScreen multiple times, but nobody
    calls xf86SetEntityShared prior to that. Consequently, calls for all
    but first device instance fail.
    
    Prior to introduction of platform bus, the logic was that the Probe
    function would make the entity sharable, which would cause Xserver
    to later make it shared prior to adding it to screen. With the
    platform bus loading, add to screen happens in the probe
    function so we have to make it shared there.
    
    Signed-off-by: Ilija Hadzic <ihadzic@research.bell-labs.com>

:040000 040000 42764e008e64efcf63a9324e859d73c292db20fd 36d1a97b0bc6add7eff8fab50757cf21eac1b1a2 M	src
Comment 1 Serkan Hosca 2012-11-02 14:02:10 UTC
Created attachment 69446 [details]
Working X log
Comment 2 Serkan Hosca 2012-11-02 14:03:13 UTC
Created attachment 69447 [details]
Failing X log
Comment 3 Alex Deucher 2012-11-02 14:04:21 UTC
*** Bug 56663 has been marked as a duplicate of this bug. ***
Comment 4 Alex Deucher 2012-11-02 14:06:33 UTC
reverted for now.  thanks.
Comment 5 Ilija Hadzic 2012-11-02 19:11:30 UTC
Created attachment 69456 [details]
version 2 of 39eac3104c2f08b4d78aab3f88fd104301eb4711
Comment 6 Ilija Hadzic 2012-11-02 19:13:15 UTC
Sorry I goofed out the original patch (forgot to test it in non-zaphod mode). Just attached the new patch, which on my end fixes Zaphod mode and does not break the non-Zaphod mode. Can you please apply on the top of the latest git.
Comment 7 Serkan Hosca 2012-11-03 13:20:39 UTC
(In reply to comment #6)
> Sorry I goofed out the original patch (forgot to test it in non-zaphod
> mode). Just attached the new patch, which on my end fixes Zaphod mode and
> does not break the non-Zaphod mode. Can you please apply on the top of the
> latest git.

Yes the patch works


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.